# jedi-mcp

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE.md  NAVIGATION_EXTRACTOR_FIX.md  README.md  example_usage.py  full_page.html  pyproject.toml  sidebar_html.html  test.env  test_browser_nav.py  test_browser_render.py  test_gemini_connection.py  test_integration.py  test_mcp_integration.py  test_sequelize_nav.py  test_smart_nav.py
.kiro/specs/doc-to-mcp-server/: design.md  requirements.md  tasks.md
.kiro/specs/vector-search-enhancement/: design.md  original_spec_prompt.md  requirements.md  tasks.md
src/jedi_mcp/: __init__.py  browser_navigation_extractor.py  cli.py  content_processor.py  crawler.py  database.py  embedding_generator.py  mcp_server.py  model_config.py  models.py  ms_learn_extractor.py  navigation_extractor.py  smart_navigation_extractor.py  vector_database.py
tests/: __init__.py  test_setup.py
tests/integration/: __init__.py
tests/property/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_content_processor.py  test_crawler.py  test_database.py  test_mcp_server.py  test_models.py  test_navigation_extractor.py
